<resources>
    <string name="app_name">ManipulacaoGPS</string>
    <string name="gps_permission">Pedir permissão de GPS</string>
    <string name="gps_enable">Ativar GPS</string>
    <string name="gps_desable">Desativar GPS</string>
    <string name="start_trail">Iniciar percurso</string>
    <string name="stop_trail">Terminar percurso</string>
    <string name="view_trail">Distância percorrida</string>
    <string name="view_time">Tempo passado</string>
</resources>
