<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="5"
    android:columnCount="2"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/permissionGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/gps_permission" />

    <Button
        android:id="@+id/enableGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"

        android:text="@string/gps_enable" />

    <Button
        android:id="@+id/desableGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/gps_desable" />


    <Button
        android:id="@+id/startTrail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/start_trail" />

    <Button
        android:id="@+id/stopTrail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/stop_trail" />


    <TextView

    />

    <TextView

        />

    <TextView

        />


</GridLayout>